@@ -160,8 +160,7 @@ function snapinDrag(event) {
   // Drag the snapin
   snapinDragging.style.position = 'absolute';
   var newTop = event.clientY  - snapinOffset[0] - snapinScrollTop;
-  /*if (weAreIEF__k)
-      newTop += document.getElementById('side_content').scrollTop;*/
+  newTop += document.getElementById('side_content').scrollTop;
   snapinDragging.style.top      = newTop + 'px';
   snapinDragging.style.left     = (event.clientX - snapinOffset[1]) + 'px';
   snapinDragging.style.zIndex   = 200;
@@ -284,7 +283,8 @@ function getSnapinList() {
 }
 
 function getSnapinCoords(obj) {
-  var snapinTop = snapinDragging.offsetTop + document.getElementById('side_content').scrollTop;
+  var snapinTop = snapinDragging.offsetTop;
+  // + document.getElementById('side_content').scrollTop;
 
   var bottomOffset = obj.offsetTop + obj.clientHeight - snapinTop;
   if (bottomOffset < 0)
