@@ -66,6 +66,7 @@
     * 0006 FIX: Checkboxes for hosts/services were missing on modified views...
     * 0284 FIX: Context help toggled on/off randomly...
     * 0285 FIX: Fixed bookmarking of absolute URLs or PNP/NagVis URLs in sidebar snapin...
+    * 0296 FIX: Fixed moving of snapins while in scrolled sidebar...
 
     WATO:
     * 0053 New rule for configuring the display_name of a service...
